# avimove

./: README.md  pyproject.toml
avimove/forage_detect/src/: birdTag.py
src/avimove/: __init__.py  bird_tag.py  pyproject.toml
src/avimove/forage_detect/: __init__.py  main_func.py
src/avimove/signal_processing/: __init__.py  accel_sig_proc.py
src/avimove/wind_detect/: __init__.py
