[project]
name = "avimove"
version = "0.1.0"
description = "Load and analyse foraging behaviour and local wind conditions of avian biologging records."
authors = [
    {name = "Aran Garrod",email = "aran.garrod@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.3",
    "numpy>=2.0.1",
    "lmfit>=1.2.1",
    "pyarrow>=12.0.1",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "statsmodels>=0.14.0",
    "distinctipy>=1.3.0",
]

[project-urls]
repository = "https://github.com/takujinonda/BiPAnalysisCodeShare"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
